# PCSX-Reloaded

./: AUTHORS  COPYING  INSTALL  Makefile.am  Makefile.in  README  aclocal.m4  configure  configure.ac
data/: Makefile.in  pcsx.desktop  pcsx.glade2
debian/: README.Debian  changelog  control  copyright  docs  pcsx-df.menu  rules
doc/: Makefile.in  keys.txt  pcsx.1  tweaks.txt
gui/: Config.c  Gtk2Gui.c  Linux.h  LnxMain.c  Makefile.am  Makefile.in  Plugin.c  Plugin.h  hdebug.c  hdebug.h
include/: config.h.in
libpcsxcore/: Makefile.am  Makefile.in  debug.h  gte.c  misc.c  plugins.c  psxbios.c  psxcommon.h  psxinterpreter.c  psxmem.c  psxmem.h  r3000a.c  r3000a.h
libpcsxcore/ix86/: iGte.h  (+3 more)
pcsxr/: AUTHORS  CMakeLists.txt  Makefile.am  configure.ac
pcsxr/data/..svnbridge/: pcsxr.ui
pcsxr/gui/: AboutDlg.c  CMakeLists.txt  ConfDlg.c  DebugMemory.c  GtkGui.c  LnxMain.c  MemcardDlg.c  Plugin.c
pcsxr/gui/..svnbridge/: GtkGui.c
pcsxr/gui/po/: CMakeLists.txt
pcsxr/libpcsxcore/: cdriso.c  gpu.c  gte.c  misc.c  plugins.c  plugins.h  psxbios.c  psxcommon.h  psxcounters.c  psxhw.c  psxinterpreter.c  psxmem.c  psxmem.h  r3000a.c  sio.c
pcsxr/libpcsxcore/..svnbridge/: .svnbridge
pcsxr/libpcsxcore/ix86/: iR3000A.c
pcsxr/macosx/: .gitignore  Info.plist
pcsxr/macosx/..svnbridge/: .svnbridge  PcsxrController.m  hotkeys.h
pcsxr/macosx/Pcsxr-QL/: PSXMemEnumerator.m  Pcsxr-QL-Info.plist
pcsxr/macosx/Pcsxr.xcodeproj/: project.pbxproj
pcsxr/macosx/Pcsxr.xcodeproj/..svnbridge/: .svnbridge
pcsxr/macosx/Pcsxr.xcodeproj/xcshareddata/xcschemes/: PCSXR.xcscheme  Pcsxr-QL.xcscheme
pcsxr/macosx/Pcsxr.xcworkspace/..svnbridge/: .svnbridge
pcsxr/macosx/Psx-Memcard/: GetMetadataForFile.m  Psx-Memcard-Info.plist
pcsxr/macosx/Source/: PcsxrController.m  PcsxrMemCardArray.m  PcsxrMemoryObject.h  PcsxrMemoryObject.m  PcsxrPlugin.m
pcsxr/macosx/plugins/Bladesio1/: Info.plist
pcsxr/macosx/plugins/Bladesio1/macsrc/..svnbridge/: cfg.c
pcsxr/macosx/plugins/DFCdrom/: Info.plist
pcsxr/macosx/plugins/DFCdrom/DFCdrom.xcodeproj/..svnbridge/: .svnbridge
pcsxr/macosx/plugins/DFCdrom/English.lproj/..svnbridge/: InfoPlist.strings
pcsxr/macosx/plugins/DFInput/: Info.plist
pcsxr/macosx/plugins/DFInput/DFInput.xcodeproj/..svnbridge/: .svnbridge
pcsxr/macosx/plugins/DFInput/English.lproj/..svnbridge/: InfoPlist.strings
pcsxr/macosx/plugins/DFInput/macsrc/..svnbridge/: ControllerList.h
pcsxr/macosx/plugins/DFNet/: Info.plist
pcsxr/macosx/plugins/DFSound/Resorces/OpenAL/: Info-AL.plist
pcsxr/macosx/plugins/DFSound/Resorces/SDL/: Info-SDL.plist
pcsxr/macosx/plugins/DFSound/Resorces/Shared/: SPUShared-info.plist
pcsxr/macosx/plugins/DFXVideo/: Info.plist
pcsxr/macosx/plugins/DFXVideo/English.lproj/..svnbridge/: InfoPlist.strings
pcsxr/macosx/plugins/DFXVideo/PeopsSoftGPU.xcodeproj/..svnbridge/: .svnbridge
pcsxr/macosx/plugins/PeopsXgl/: Info.plist
pcsxr/plugins/: CMakeLists.txt
pcsxr/plugins/bladesio1/: connection.c  fifo.c  fifo.h  sio1.c
pcsxr/plugins/bladesio1/..svnbridge/: cfg.c  gui.c  sio1.c
pcsxr/plugins/dfcdrom/: CMakeLists.txt  cdr.c
pcsxr/plugins/dfinput/: CMakeLists.txt  cfg-gtk.c  pad.c
pcsxr/plugins/dfinput/..svnbridge/: cfg-gtk.c  util.c  util.h
pcsxr/plugins/dfnet/..svnbridge/: .svnbridge
pcsxr/plugins/dfsound/: CMakeLists.txt  cfg.c
pcsxr/plugins/dfsound/..svnbridge/: openal.c
pcsxr/plugins/dfxvideo/: CMakeLists.txt  cfg.c
pcsxr/plugins/dfxvideo-sdl/: CMakeLists.txt  gpu.c
pcsxr/plugins/dfxvideo/..svnbridge/: soft.c
pcsxr/plugins/peopsxgl/: CMakeLists.txt  gpu.c
pcsxr/plugins/peopsxgl/..svnbridge/: soft.h
pcsxr/win32/: .gitattributes  pcsxr.sln  pcsxr.vcxproj  pcsxr.vcxproj.filters  resource.h
pcsxr/win32/gui/: WndMain.c
pcsxr/win32/plugins/PadSSSPSX/: PadSSSPSX.vcxproj  PadSSSPSX.vcxproj.filters
pcsxr/win32/plugins/bladesio1/: bladesio1.sln  bladesio1.vcxproj  bladesio1.vcxproj.filters  resource.h
pcsxr/win32/plugins/bladesio1/winsrc/: cfg-winapi.c  stdafx.h
pcsxr/win32/plugins/dfsound/: DFSound.vcxproj  DFSound.vcxproj.filters
pcsxr/win32/plugins/dfxvideo/: DFXVideo.vcxproj  DFXVideo.vcxproj.filters
pcsxr/win32/plugins/dfxvideo/..svnbridge/: DFXVideo.dev  DFXVideo.vcxproj.filters
pcsxr/win32/plugins/peopsxgl/: gpuPeopsOpenGL.vcxproj  gpuPeopsOpenGL.vcxproj.filters
pixmaps/: Makefile.in
plugins/dfOpenGL/: Makefile.am  Makefile.in  gpu_i.h  primitive_drawing.c
plugins/dfOpenGL/gpucfg-0.1df/: main.c
plugins/dfbinimage/: About.cpp  CDDAData.cpp  CDDAData.hpp  CDInterface.hpp  CDTime.hpp  ConfigCallbacks.cpp  ConfigCallbacks.hpp  ConfigFunctions.cpp  ConfigFunctions.hpp  Exception.hpp  FileInterface.cpp  FileInterface.hpp  Frame.hpp  Globals.cpp  Makefile.am  Makefile.in  Open.cpp  PS2Open.cpp  Preferences.cpp  Preferences.hpp  SubchannelData.cpp  SubchannelData.hpp  TimeCache.hpp  TrackInfo.hpp  TrackParser.cpp  TrackParser.hpp  Utils.hpp  defines.h  externs.h
plugins/dfinput/: Makefile.am  Makefile.in  Makefile.noautoconf  cfg.c  dfinput.glade2  pad.c  readme.txt
plugins/dfiso/: Config.c  Config.h  Makefile.am  Makefile.in  README  alsaplay.c  alsaplay.h  cddaplay.c  cddaplay.h  cdriso.c  cdriso.h  conf.c  dfiso.glade2  tocparser.c  tocparser.h
plugins/dfsound/: Filemap.txt  Makefile.am  Makefile.in  alsa.c  cfg.c  debug.c  dma.c  dsoundoss.h  externals.h  freeze.c  oss.c  psemu.c  registers.c  regs.h  resource.h  reverb.c  reverb.h  spu.c  spuPeopsSound.c  spuPeopsSound.def  stdafx.h  xa.c
plugins/dfsound/spucfg-0.1df/: HACKING  Makefile  callbacks.h  interface.c  interface.h  main.c  spucfg2.gladep  support.h
plugins/dfxvideo/: Makefile.am  Makefile.in  callbacks.c  callbacks.h  cfg.c  cfg.h  draw.c  draw.h  externals.h  fps.c  fps.h  gpu.c  gpu.h  interface.c  interp.h  key.c  menu.c  prim.c  prim.h  psemu.h  soft.c  soft.h  support.c  zn.c
plugins/dfxvideo/gpucfg-0.1df/: HACKING  callbacks.c  gpucfg.gladep  interface.c  interface.h  main.c  support.c  support.h
po/: LINGUAS  es.gmo  es.po  ja.gmo  ja.po  sv.gmo  sv.po  zh_CN.gmo  zh_CN.po
win32/: config.h  pcsx.sln  pcsx.vcproj
(+45 files in other folders)
