#plugins
#if (BUILD_SIO)
add_subdirectory(bladesio1)
#endif()
add_subdirectory(nullsio1)
add_subdirectory(dfcdrom)
add_subdirectory(dfinput)
add_subdirectory(dfnet)
add_subdirectory(dfsound)
add_subdirectory(dfxvideo)
#add_subdirectory(dfxvideo-sdl)
#if (BUILD_GL)
add_subdirectory(peopsxgl)
#endif()